--- a/frontend/index.html
+++ b/frontend/index.html
@@ -152,7 +152,8 @@
       font-weight: 600;
     }
 
-    .status.in_meeting {
+    .status.in_meeting,
+    .status.exam_duty {
       background: #fef3c7;
       color: #b45309;
       border-radius: 8px;
@@ -469,7 +470,8 @@
       off_duty: "Off Duty",
       in_meeting: "In Meeting",
       on_weekend: "On Weekend",
-      postponed: "Class Postponed"
+      postponed: "Class Postponed",
+      exam_duty: "On Exam Invigilation"
     };
 
     const SEGMENTS = {
